# service/DefaultService.js
@@ -4,96 +4,77 @@ let DB=require("./db.js");
 const uuidv4 = require('uuid/v4');
 
 
-//Update ttl
-exports.extendSema = function(semaKey,semaHandle,semaphore) {
+//MUTEX
 
-  DB.quer('test01',semaKey).then((val)=>{
-    console.log('## Got Item:',val);
-    let exp=val[0]['data']['expiry'] || 0;
-    let now=Date.now();
-    exp=(now-exp)/1000;
-    exp==~~exp;
-    semaphore={'ttl':exp};
-  });
-
-  return DB.updatItem(semaKey,semaHandle).then((val)=>{
-    console.log('## lock extend success');
-    return val || 0;
-  }).catch((err)=>{
-    console.log('%% Catch Error.',err);
-    return {'_semaKey':semaKey};
-  });
-
-}
-
-
-//Acquire semaphore(Lock)
-exports.lockSema = function(semaKey,semaphore){
-
-  let obj={
-    "handle" : uuidv4(),
-    "id" : semaKey,
-    "expiry" : Date.now(),
-    "locked" : true
+//Acquire a Mutex
+exports.lockMutex = function(mutexKey,mutexttl) {
+  let ttl=mutexttl['ttl'] || 5;
+  ttl=ttl<0?-ttl:ttl;
+  let obj = {
+      "id" : mutexKey,
+      "handle" : uuidv4(),
+      "expiry" : Date.now()+(ttl*1000),
+      "locked" : true,
   };
-
-  let checkSpace =DB.updatCount('main',1).then((res)=>{
-    console.log('## adding...');
-    return DB.crea('test01',semaKey,obj);//A(promise)
-  },(rej)=>{
-    console.log('%% out of space...');
-    return {'outOfSpace':{'_semaKey':semaKey}};//B
-  })
-
-  let checkKeyId =checkSpace.then((ans)=>{
-    console.log('## ',ans);
-    return ans;//C //ans=B or A(resolve)
-  },(rej)=>{
-    console.log('%% duplicated key');
-    return DB.updatCount('main',-1);//D(promise) //A(reject) key duplicated count-1
-  })
-
-  return checkKeyId.then((ans)=>{
-    console.log('## finish...');
-    if(ans==='updated') return {'duplicatedKey':{'_semaKey':semaKey}} //D(resolve)
-    return ans || 0;//C
-  },(rej)=>{
-    console.log('%% Error on delete duplicated key');
-    return {'_semaKey':semaKey};//D(reject)(other reasons)
-  }).catch((err)=>{
-    //other Error occur
-    console.log('%% Catch Error.',err);
-    return {'_semaKey':semaKey};
-  });
+  return DB.creaLoc('MutexTB',mutexKey,obj);
 }
 
+//Delete a Mutex(Unlock)
+exports.unlockMutex = function(mutexKey,mutexHandle) {
+  return DB.deleLoc('MutexTB',mutexKey,mutexHandle);
+}
+
+//Update mutex expiry(ttl)
+exports.extendMutex = function(mutexKey,mutexHandle,mutexttl) {
+  return DB.heartBeat('MutexTB',mutexKey,mutexHandle,mutexttl['ttl']);
+}
+
+//Query mutex status
+exports.queryMutex = function(mutexKey) {
+  return DB.querLoc('MutexTB',mutexKey);
+}
+
+
+//SEMAPHORE
+
+//Create semaphore
+exports.createSema = function(semaKey,semaArgs) {
+  let ttl=semaArgs['ttl'] || 15;
+  ttl=ttl<0?-ttl:ttl;
+  let maxCapacity=semaArgs['maxCapacity'] || 15;
+  let obj = {
+      "id" : semaKey,
+      "handle" : uuidv4(),
+      "countInuse" : 0,
+      "remainCapacity" : maxCapacity,
+      "maxCapacity" : maxCapacity,
+      "expiry" : Date.now()+(ttl*1000),
+  };
+  return DB.creaLoc('SemaTB',semaKey,obj);
+}
+
+//Delete semaphore
+exports.deleteSema = function(semaKey,semaHandle) {
+  return DB.deleLoc('SemaTB',semaKey,semaHandle);
+}
+
+//Acquire(+1) space from semaphore
+exports.lockSema = function(semaKey,semaHandle,semattl) {
+  return DB.updatSemaCount(semaKey,semaHandle,1,semattl['ttl']);
+}
+
+//Release(-1) space from semaphore
+exports.releaseSema = function(semaKey,semaHandle) {
+  return DB.updatSemaCount(semaKey,semaHandle,-1,0);
+}
+
+//Update semaphore expiry(ttl)
+exports.extendSema = function(semaKey,semaHandle,semattl) {
+  return DB.heartBeat('SemaTB',semaKey,semaHandle,semattl['ttl']);
+}
 
 //Query semaphore status
 exports.querySema = function(semaKey) {
-  return DB.quer('test01',semaKey).then((val)=>{
-    console.log('## Got Item:',val);
-    let v=val[0]['data']['expiry'] || 0;
-    return {'expiry':v} || 0;//Unix millisecond
-  }).catch((err)=>{
-    console.log('%% Catch Error.',err);
-    return {'_semaKey':semaKey};
-  });
+  return DB.querLoc('SemaTB',semaKey);
 }
-
-
-//Unlock
-exports.unlockSema = function(semaKey,semaHandle) {
-  //if delete failed catch error;
-  return DB.dele('test01',semaKey,semaHandle).then(()=>{
-    console.log('##delete success,update counting ...');
-    return DB.updatCount('main',-1);
-  }).then(()=>{
-    return {'DeleteSuccess':{'key':semaKey,'handle':semaHandle}} || 0;
-  }).catch((err)=>{
-    console.log('%% Catch Error.',err);
-    return {'_DeleteSuccess':semaKey};
-  });
-}
-
-
 
